--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -42,25 +42,21 @@ $component_margin_mobile: 150px;
     width: 100%
   }
 
-  & > h1 {
-    margin-bottom: 50px;
-  }
-
   & > p {
     margin: 50px 0;
     width: 70%;
     text-align: center;
+
+    @include breakpoint(mobile) {
+      width: 100%;
+    }
   }
 }
-
- .button_container {
-    display: flex;
-    gap: 20px;
-  }
 
 .intro_template {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: $component_margin;
   width: 1025px;
 
@@ -73,7 +69,13 @@ $component_margin_mobile: 150px;
   }
 
   & > p {
-      margin-top: 50px;
+    width: 70%;
+    text-align: center;
+    margin: 50px 0;
+
+    @include breakpoint(mobile) {
+      width: 100%;
+    }
   }
 
   & > a {
@@ -84,7 +86,7 @@ $component_margin_mobile: 150px;
 .carousel_container {
     position: relative;
     width: 31vw;
-    margin: 5vw auto 28vw auto;
+    margin: 2vw auto 28vw auto;
     perspective: 150vw;
 
     @include breakpoint(mobile) {
@@ -232,5 +234,16 @@ to {
 .keyword {
   & > h4 {
     margin-bottom: 20px;
+  }
+}
+
+.button_container {
+  margin-top: 100px;
+  display: flex;
+  gap: 50px;
+
+  @include breakpoint(mobile) {
+    flex-direction: column;
+    gap: 10px;
   }
 }
