--- a/styles/pages/documents.module.scss
+++ b/styles/pages/documents.module.scss
@@ -1,6 +1,6 @@
 @import '../lib/theme.scss';
 
-$component_margin: 150px;
+$component_margin: 200px;
 $component_margin_mobile: 100px;
 
 .subtitle {
@@ -13,7 +13,7 @@ $component_margin_mobile: 100px;
 }
 
 .description {
-    margin: 50px 0;
+    margin: 100px 0 50px 0;
 }
 
 .container {
@@ -32,7 +32,7 @@ $component_margin_mobile: 100px;
         }
 
         & > h3 {
-            margin-bottom: 10px;
+            margin-bottom: 50px;
         }
     }
 
@@ -67,8 +67,8 @@ $component_margin_mobile: 100px;
 
 .structure_img_container {
     position: relative;
-    width: 1025px;
-    height: 540px;
+    width: 700px;
+    height: 370px;
     margin: 10px 0;
 
     @include breakpoint(tablet) {
@@ -90,6 +90,24 @@ $component_margin_mobile: 100px;
     }
 }
 
+.ogtag_reference {
+    width: 100%;
+    & > div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0;
+
+        & > img {
+            width: 40%;
+        }
+
+        & > p {
+            margin: 0 20px;
+        }
+    }
+}
+
 .equation {
     align-self: center;
     display: flex;
@@ -98,8 +116,8 @@ $component_margin_mobile: 100px;
     margin-bottom: 50px;
 
     & > img {
-        width: 150px;
-        margin: 0 25px;
+        width: 25%;
+        margin: 0 20px;
 
         @include breakpoint(mobile) {
             width: 70px;
