--- a/styles/pages/documents.module.scss
+++ b/styles/pages/documents.module.scss
@@ -14,6 +14,10 @@ $component_margin_mobile: 100px;
 
 .description {
     margin: 100px 0 50px 0;
+
+    @include breakpoint(mobile) {
+        margin: 50px 0 25px 0;
+    }
 }
 
 .container {
@@ -33,6 +37,10 @@ $component_margin_mobile: 100px;
 
         & > h3 {
             margin-bottom: 50px;
+
+            @include breakpoint(mobile) {
+                margin-bottom: 25px;
+            }
         }
     }
 
@@ -57,8 +65,8 @@ $component_margin_mobile: 100px;
     @extend %title_style;
 }
 
-.template_structure, .web_stack {
-    align-self: flex-end;
+.overview, .template_structure, .web_stack {
+    align-self: flex-start;
 
     @include breakpoint(smallScreen) {
         align-self: auto;
@@ -82,8 +90,8 @@ $component_margin_mobile: 100px;
     }
 }
 
-.overview, .basic_features {
-    align-self: flex-start;
+.why_templates, .basic_features {
+    align-self: flex-end;
 
     @include breakpoint(smallScreen) {
         align-self: auto;
